--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -292,6 +292,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:drawablePadding="10dp"
+                    android:includeFontPadding="false"
                     android:drawableStart="@mipmap/icon_wx_pay"
                     android:gravity="center_vertical"
                     android:text="@string/wx_pay" />
@@ -324,6 +325,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:drawablePadding="10dp"
+                    android:includeFontPadding="false"
                     android:drawableStart="@mipmap/icon_ali_pay"
                     android:gravity="center_vertical"
                     android:text="@string/ali_pay" />
