--- a/app/src/main/res/layout/dialog_confirm_account.xml
+++ b/app/src/main/res/layout/dialog_confirm_account.xml
@@ -57,6 +57,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical|end"
             android:lines="1"
+            android:text="*刚"
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_content" />
     </LinearLayout>
@@ -90,6 +91,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical|end"
             android:lines="1"
+            android:text="新奥燃气"
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_content" />
     </LinearLayout>
@@ -123,6 +125,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical|end"
             android:lines="1"
+            android:text="A9331659000"
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_content" />
     </LinearLayout>
@@ -150,11 +153,13 @@
 
         <TextView
             android:id="@+id/address"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="center_vertical|end"
             android:lines="1"
+            android:text="北京市朝阳区十里堡****单元**2室"
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_content" />
     </LinearLayout>
@@ -188,6 +193,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical|end"
             android:lines="1"
+            android:text="0.00元"
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_content" />
     </LinearLayout>
