--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -128,6 +128,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
+            android:includeFontPadding="false"
             android:text="@string/read_and_agree"
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_content" />
