--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -292,15 +292,16 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:drawablePadding="10dp"
-                    android:includeFontPadding="false"
                     android:drawableStart="@mipmap/icon_wx_pay"
                     android:gravity="center_vertical"
+                    android:includeFontPadding="false"
                     android:text="@string/wx_pay" />
 
                 <ImageView
                     android:id="@+id/wx_pay_select"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:src="@mipmap/icon_item_selector"
                     android:visibility="gone" />
 
@@ -325,15 +326,16 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:drawablePadding="10dp"
-                    android:includeFontPadding="false"
                     android:drawableStart="@mipmap/icon_ali_pay"
                     android:gravity="center_vertical"
+                    android:includeFontPadding="false"
                     android:text="@string/ali_pay" />
 
                 <ImageView
                     android:id="@+id/ali_pay_select"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:src="@mipmap/icon_item_selector"
                     android:visibility="gone" />
 
