--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -19,5 +19,5 @@
         android:padding="5dp"
         android:text="@string/no_history"
         android:textColor="@color/text_gray_dark_color"
-        android:textSize="@dimen/ts_btn" />
+        android:textSize="@dimen/ts_content" />
 </RelativeLayout>
