--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -16,7 +16,8 @@
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
         android:text="@string/payments_alert_msg"
-        android:textColor="@color/text_color_red" />
+        android:textColor="@color/text_color_red"
+        android:textSize="@dimen/ts_note" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -56,6 +57,7 @@
                     android:ellipsize="end"
                     android:gravity="center_vertical|end"
                     android:lines="1"
+                    android:text="*刚"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/ts_content" />
             </LinearLayout>
@@ -85,6 +87,7 @@
                     android:ellipsize="end"
                     android:gravity="center_vertical|end"
                     android:lines="1"
+                    android:text="A9331659000"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/ts_content" />
             </LinearLayout>
@@ -114,6 +117,7 @@
                     android:ellipsize="end"
                     android:gravity="center_vertical|end"
                     android:lines="1"
+                    android:text="北京市朝阳区十里堡****单元**2室"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/ts_content" />
             </LinearLayout>
@@ -143,6 +147,7 @@
                     android:ellipsize="end"
                     android:gravity="center_vertical|end"
                     android:lines="1"
+                    android:text="0.00元"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/ts_content" />
             </LinearLayout>
@@ -249,6 +254,7 @@
                     android:inputType="number"
                     android:lines="1"
                     android:textColor="@color/text_color"
+                    android:textColorHint="@color/text_hint_color"
                     android:textSize="@dimen/ts_content" />
 
                 <TextView
