--- a/app/src/main/res/layout/layout_function_development.xml
+++ b/app/src/main/res/layout/layout_function_development.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
+    android:layout_marginTop="8dp"
     android:background="@color/white"
     android:paddingBottom="20dp"
     android:paddingTop="20dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginTop="8dp"
     app:l_radius="5dp"
     app:l_shadowAlpha="0.2"
     app:l_shadowElevation="5dp">
@@ -29,7 +29,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="57dp"
         android:text="其他功能正在开发中，敬请期待"
-        android:textColor="@color/text_gray_color"
+        android:textColor="@color/text_hint_color"
         android:textSize="14sp" />
 
 
