修改UI以及修改!!使用问题

--- a/app/src/main/res/layout/activity_binding_phone.xml
+++ b/app/src/main/res/layout/activity_binding_phone.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/et_underline"
         android:hint="@string/phone_prompt"
-        android:inputType="phone"
+        android:inputType="number"
         android:maxLines="1"
         android:paddingBottom="13dp"
         android:paddingTop="13dp"
