--- a/app/src/main/res/layout/activity_user_agreement.xml
+++ b/app/src/main/res/layout/activity_user_agreement.xml
@@ -7,82 +7,9 @@
 
     <include layout="@layout/include_activity_header" />
 
-    <View
+    <WebView
+        android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/line_color" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never"
-        android:scrollbars="none">
-
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="20dp"
-            android:lineSpacingMultiplier="1.4"
-            android:text="
-一、总则燃气营业厅会员服务协议（以下简称“本协议”）双方为燃气营业厅与燃气营业厅用户（以下简称“用户”）。本协议用于规范双方之间全部的法律关系及权利义务，具有合同效力。燃气营业厅旨在利用因特网科技所具有的便利性，为燃气营业厅用户提供自助方式的网上账单查询、账单缴费、账户充值、账户查询、缴费查询等服务。\n\n
-二、服务内容\n
-\u3000\u30001、燃气营业厅提供网上交易平台供用户使用，以及燃气营业厅通过网上交易平台提供的其他服务。\n
-\u3000\u30002、燃气营业厅会定期或不定期的对提供网络服务的平台和相关的设备进行检修或维护。燃气营业厅不能随时遇见到任何技术上的问题或其他困难。该等困难可能会导致数据损失或其他服务中断。为此，您明确理解和同意，您使用“服务”的风险由您自行承担。\n\n
-三、用户账号\n
-\u3000\u30001、经本站注册系统完成注册程序并绑定燃气账户的用户即成为正式用户，可以获得本站规定用户所应享有的一切权限；未经绑定的用户仅享有本站部分功能权限。\n
-\u3000\u30002、用户只能按照注册要求使用手机号注册。用户有义务保证密码和账号的安全，用户利用该密码和账号所进行的一切活动引起的任何损失或损害，由用户自行承担全部责任，本站不承担任何责任。如用户发现账号遭到未授权的使用或发生其他任何安全问题，应立即修改账号密码并妥善保管，如有必要，请通知本站。因黑客行为或用户的保管疏忽导致账号非法使用，本站不承担任何责任。\n\n
-四、用户的权力和义务\n
-\u3000\u30001、自行配置手机等移动端上网的所需设备。\n
-\u3000\u30002、自行负担个人上网所支付的与此服务有关的电话费用、网络费用。\n
-\u3000\u30003、用户有权利拥有自己在燃气营业厅的用户名及交易密码，并有权利使用自己的用户名及密码随时登陆燃气营业厅交易平台。用户不得以任何形式擅自转让或授权他人使用自己的燃气营业厅用户名。\n
-\u3000\u30004、用户有权根据本协议的规定以及燃气营业厅网上发布的相关规则利用燃气营业厅网上交易平台查询账单、缴纳账单以及有权享受燃气营业厅提供但不包括上述页面中以文字、图片或其他形式所设的站外链接所指向的其他或网页内容的其他的有关信息服务。\n
-\u3000\u30005、用户使用燃气营业厅网上交易平台时如遇到问题，可以向燃气营业厅相关部门进行咨询要求解答。\n
-\u3000\u30006、用户有义务在注册时提供自己的真实资料，并保证诸如电子邮件地址、联系电话、联系地址、邮政编码等内容的有效性及安全性。同时，用户也有义务在相关资料实际变更时及时更新有关注册资料。用户保证不以他人资料在燃气营业厅进行注册或认证。\n
-\u3000\u30007、用户保证不利用技术手段及其他手段破坏及扰乱燃气营业厅网上交易平台程序的正常运行。\n
-\u3000\u30008、用户在登录燃气营业厅后，只能使用本人的银行卡或银行账户进行交纳账单操作。因使用或盗用他人银行卡及银行卡账户而完成的缴纳账单交易所产生的任何责任由客户自行承担。\n
-\u3000\u30009、用户在缴纳账单过程中，应确保银行卡或银行账户之真实、有效。若因银行卡或银行账户被取消、过期或账户余额不足而造成缴纳失败所产生的损失及后果，由用户负责。\n
-\u3000\u300010、用户应学习和掌握使用移动终端、电脑及网络的基本知识。特别是网络安全防范的基本知识，防止自己的用户名、密码、注册信息、信用卡账户密码等信息因自己的疏忽大意或操作失误而被他人获取。\n
-\u3000\u300011、用户承诺自己在使用燃气营业厅时实施的所有行为遵守国家法律、法规和燃气营业厅的相关规定以及各种社会公共利益或公共道德。对于任何法律后果的发生，用户将以自己的名义独立承担所有相应的法律责任。\n\n
-五、燃气营业厅的权利和义务\n
-\u3000\u30001、燃气营业厅有义务在技术上确保整个网上交易平台的正常运行，保证用户网上交易活动的顺利。\n
-\u3000\u30002、燃气营业厅对交易的接入系统安全、有效、实时性负责、但不承担因通讯故障等非燃气营业厅主观因素所引起交易中断、交易错误引起的交易纠纷。\n
-\u3000\u30003、燃气营业厅有义务建立健全公司内部规章制度，保证用户资料的安全。\n
-\u3000\u30004、对用户在注册使用燃气营业厅网上交易平台中所遇到的与交易或注册有关的问题及反映的情况，燃气营业厅将视具体情况作出回复。\n
-\u3000\u30005、燃气营业厅有权限根据具体情况增加、减少或撤销网上业务种类，也有权拒绝或取消不符合要求的用户的网上交易资格，而无需预先通知客户。\n
-\u3000\u30006、燃气营业厅对客户在注册中提供的相关资信资料及在交易中产生的相关资料负有保密义务，但有权利用这些资料进行有关联系，沟通之用，或者根据法律规定向有权查询的法定机构，或为完成交易指令的需要向第三方提供。为向用户提供优质服务，燃气营业厅有权在与第三方合作商签订保密条款的基础上，允许第三方合作商直接向用户提供增值服务。同时燃气营业厅有权为统计分析、内部管理之目的使用上述资料。\n
-\u3000\u30007、燃气营业厅有权对用户的注册资料及交易行为进行查阅，发现注册资料或交易行为中存在问题，或可能会导致不良后果的，有权向用户发出询问，要求用户进一步提供必要的信息或直接对该物品、该用户及相关的交易作出相应处理。\n\n
-六、责任声明\n
-\u3000\u30001、在协议有效期内，除非本协议有特别规定外，双方不得以任何理由解除本协议，燃气营业厅不得擅自中断或终止对用户提供本协议规定的服务。\n
-\u3000\u30002、用户明确同意其使用本站网络服务所存在的风险及一切后果将完全由用户本人承担，燃气营业厅平台对此不承担任何责任。\n
-\u3000\u30003、燃气营业厅无法保证网络服务一定能满足用户的要求，也不保证网络服务的及时性、安全性、准确性。\n
-\u3000\u30004、用户向燃气营业厅提出注销燃气营业厅注册用户身份，经燃气营业厅审核同意，由燃气营业厅注销注册用户，用户即解除与燃气营业厅的服务协议关系。但注销用户后，燃气营业厅仍保留下列权利及义务：\n
-\u3000\u3000a)用户注销后，燃气营业厅有权保留和合理使用用户的注册资料及以前的交易行为记录。\n
-\u3000\u3000b)用户注销后，如用户在注销前在燃气营业厅交易平台上存在违法行为或违反本协议的行为，燃气营业厅仍可行使追究的权利。\n
-\u3000\u30005、在下列情况下，燃气营业厅可以中断对用户的服务：\n
-\u3000\u3000a)不可抗力；\n
-\u3000\u3000b)为维护、检修、升级系统的需要以及相关第三方为维护、检修、升级系统所使用的主机、电力设备、公共网络等相关配套设施需要；\n
-\u3000\u3000c)用户存在违反法律法规及本协议内容的行为，经燃气营业厅通知后在规定期限内不予更正的；\n
-\u3000\u3000d)司法机关或政府行政机关依照法定程序要求燃气营业厅中断对用户服务的；\n
-\u3000\u3000e)为公共利益的需要必须中断对用户服务的；\n
-\u3000\u3000f)其他必须中断服务的情况；\n
-\u3000\u30006、在下列情况下，燃气营业厅可以通过注销用户的方式单方面终止对用户的服务；\n
-\u3000\u3000a)用户因违反本协议相关规定而被燃气营业厅中断服务，燃气营业厅将在中断服务时通知用户，如用户在合理的期限内没有对此通知内容提出合理异议的，燃气营业厅将中断对该用户的服务。但用户在恢复服务后又发生违反法律法规及本协议内容的行为，燃气营业厅可以单方面终止与该用户的服务协议；\n
-\u3000\u3000b)燃气营业厅发现用户注册资料中主要内容是虚假的，燃气营业厅可以终与该用户的服务协议；\n
-\u3000\u3000c)司法机关或行政机关依照法定程序要求燃气营业厅终止对用户服务的；\n
-\u3000\u3000d)为公共利益的需要必须终止对用户的服务；\n
-\u3000\u3000e)本协议终止或更新时，用户未确认新的服务协议的；\n
-\u3000\u3000f)其他燃气营业厅认为用户违反法律法规规定和本协议的情况。\n\n
-七、违约责任\n
-\u3000\u30001、本协议任何一方违反本协议规定的内容，给另一方造成损害的，应当承担违约责任，赔偿另一方因此造成的损失，包括但不限于物质损失、利息损失、因追索或诉讼而支出的诉讼费、合理的通讯费、交通费、住宿费、律师费等。\n
-\u3000\u30002、协议一方违反协议规定内容给另一方造成损害的，受损害一方应当采取合理措施避免损失扩大的，因防止损失扩大而支出的合理费用，由违约方承担。一方没有采取合理措施避免损失扩大的，对损失扩大部分违约方不承担赔偿。\n\n
-八、附则\n
-\u3000\u30001、本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。\n
-\u3000\u30002、如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束。\n
-\u3000\u30003、本协议解释权及修订权归新奥阳光易采科技有限公司所有。\n\n"
-            android:textColor="@color/text_color"
-            android:textSize="15sp" />
-
-    </ScrollView>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
