--- a/app/src/main/res/layout/layout_add_account.xml
+++ b/app/src/main/res/layout/layout_add_account.xml
@@ -2,7 +2,7 @@
 <com.cn.lib.widget.shadowlayout.ShadowRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="98dp"
     android:layout_marginBottom="8dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
@@ -39,6 +39,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="30dp"
         android:layout_marginTop="37dp"
