--- a/app/src/main/res/layout/activity_payments_complete.xml
+++ b/app/src/main/res/layout/activity_payments_complete.xml
@@ -62,7 +62,8 @@
         android:gravity="center"
         android:text="@string/to_payments_history"
         android:textColor="@color/white"
-        android:textSize="@dimen/ts_btn" />
+        android:textSize="@dimen/ts_btn"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/payment_again"
@@ -72,7 +73,8 @@
         android:gravity="center"
         android:text="@string/payment_again"
         android:textColor="@color/white"
-        android:textSize="@dimen/ts_btn" />
+        android:textSize="@dimen/ts_btn"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/back_to_main"
