--- a/app/src/main/res/layout/dialog_company_select.xml
+++ b/app/src/main/res/layout/dialog_company_select.xml
@@ -39,17 +39,21 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <TextView
-        android:id="@+id/confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@mipmap/btn_full_press"
-        android:gravity="center"
-        android:text="@string/confirm"
-        android:textColor="@color/white"
-        android:textSize="@dimen/ts_btn"
-        android:textStyle="bold" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="85dp">
+
+        <TextView
+            android:id="@+id/confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@mipmap/btn_full_press"
+            android:gravity="center"
+            android:text="@string/confirm"
+            android:textColor="@color/white"
+            android:textSize="@dimen/ts_btn"
+            android:textStyle="bold" />
+    </FrameLayout>
 
 </LinearLayout>
