--- a/app/src/main/res/layout/layout_address_location_header.xml
+++ b/app/src/main/res/layout/layout_address_location_header.xml
@@ -22,9 +22,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/shape_stroke_gray"
+        android:drawablePadding="6dp"
         android:drawableStart="@mipmap/icon_location_green"
         android:gravity="center"
-        android:minWidth="100dp"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
         android:text="北京" />
