--- a/app/src/main/res/layout/layout_first_into.xml
+++ b/app/src/main/res/layout/layout_first_into.xml
@@ -5,10 +5,16 @@
     android:orientation="vertical"
     android:paddingTop="10dp">
 
-    <include layout="@layout/layout_first_recharge" />
+    <include
+        android:id="@+id/pay_item"
+        layout="@layout/layout_first_recharge" />
 
-    <include layout="@layout/layout_add_account" android:id="@+id/layout_add_account"/>
+    <include
+        android:id="@+id/layout_add_account"
+        layout="@layout/layout_add_account" />
 
-    <include layout="@layout/layout_function_development" />
+    <include
+        android:id="@+id/developing"
+        layout="@layout/layout_function_development" />
 
 </LinearLayout>
