--- a/app/src/main/res/layout/item_account_info.xml
+++ b/app/src/main/res/layout/item_account_info.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cn.lib.widget.shadowlayout.ShadowLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginBottom="10dp"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:padding="20dp">
+    android:padding="20dp"
+    app:l_radius="5dp"
+    app:l_shadowAlpha="0.2"
+    app:l_shadowElevation="5dp">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -54,6 +61,7 @@
         android:gravity="center"
         android:text="@string/recharge"
         android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
-</LinearLayout>
+</com.cn.lib.widget.shadowlayout.ShadowLinearLayout>
