--- a/app/src/main/res/layout/item_payments_history.xml
+++ b/app/src/main/res/layout/item_payments_history.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/account_name"
+                android:id="@+id/user_name"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -35,7 +35,7 @@
                 android:textSize="@dimen/ts_btn" />
 
             <TextView
-                android:id="@+id/account_amount"
+                android:id="@+id/pay_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
@@ -91,7 +91,7 @@
                 android:textSize="@dimen/ts_content" />
 
             <TextView
-                android:id="@+id/account_num"
+                android:id="@+id/account_code"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
