--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_btn"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/text_green_color">
@@ -18,9 +19,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_margin="20dp"
         android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:gravity="center"
         android:text="@string/copyright_notice"
         android:textColor="@color/white"
         android:textSize="11sp" />
