隐藏客服功能

--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -70,6 +70,7 @@
         android:textSize="15sp" />
 
     <View
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginLeft="20dp"
@@ -77,6 +78,7 @@
         android:background="@color/line_color" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/btn_customer_service"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
