查询支付历史 空白页面 显示隐藏

--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -396,7 +396,8 @@
                     android:paddingRight="10dp"
                     android:text="@string/contact_customer_service"
                     android:textColor="@color/text_green_color"
-                    android:textSize="@dimen/ts_content" />
+                    android:textSize="@dimen/ts_content"
+                    android:visibility="gone" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
