--- a/app/src/main/res/layout/activity_new_account_success.xml
+++ b/app/src/main/res/layout/activity_new_account_success.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="10dp"
-        android:text="@string/no_payments"
+        android:text="@string/back_to_main"
         android:textColor="@color/text_gray_dark_color"
         android:textSize="@dimen/ts_content" />
 
