--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,13 +6,14 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <include layout="@layout/include_activity_header" />
 
     <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:tr_enable_loadmore="false"
-        app:tr_enable_overscroll="false"
-        android:layout_height="match_parent">
+        app:tr_enable_overscroll="false">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
