--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -3,6 +3,8 @@
     android:id="@+id/image_banner"
     android:layout_width="match_parent"
     android:layout_height="150dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
     android:scaleType="fitXY"
     android:src="@mipmap/banner">
 
