--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,22 +16,34 @@
         android:textColor="@color/text_color"
         android:textSize="28sp" />
 
-    <EditText
-        android:id="@+id/edit_login_phone"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/et_underline"
-        android:hint="@string/phone_prompt"
-        android:inputType="number"
-        android:maxLines="1"
-        android:paddingBottom="13dp"
-        android:paddingTop="13dp"
-        android:textColor="@color/text_color"
-        android:textColorHint="@color/text_hint_color"
-        android:textSize="14sp" />
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/edit_login_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:hint="@string/phone_prompt"
+            android:inputType="number"
+            android:maxLines="1"
+            android:paddingBottom="13dp"
+            android:paddingTop="13dp"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/text_hint_color"
+            android:textSize="14sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@drawable/et_underline" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -114,9 +126,9 @@
         android:enabled="false"
         android:gravity="center"
         android:text="登录"
-        android:textStyle="bold"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/btn_login_type"
