--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -20,22 +20,33 @@
         android:textColor="@color/text_color"
         android:textSize="28sp" />
 
-    <EditText
-        android:id="@+id/edit_reset_phone"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/et_underline"
-        android:hint="@string/phone_prompt"
-        android:inputType="number"
-        android:maxLines="1"
-        android:paddingBottom="13dp"
-        android:paddingTop="13dp"
-        android:textColor="@color/text_color"
-        android:textColorHint="@color/text_hint_color"
-        android:textSize="14sp" />
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/edit_reset_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/transparent"
+            android:hint="@string/phone_prompt"
+            android:inputType="number"
+            android:maxLines="1"
+            android:paddingBottom="13dp"
+            android:paddingTop="13dp"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/text_hint_color"
+            android:textSize="14sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@drawable/et_underline" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
