--- a/app/src/main/res/layout/layout_prompt_dialog_vertical.xml
+++ b/app/src/main/res/layout/layout_prompt_dialog_vertical.xml
@@ -34,9 +34,9 @@
 
             <View
                 android:id="@+id/view1"
-                android:background="@color/line_color"
                 android:layout_width="match_parent"
-                android:layout_height="0.5dp" />
+                android:layout_height="0.5dp"
+                android:background="@color/line_color" />
         </LinearLayout>
 
         <TextView
@@ -51,9 +51,9 @@
 
         <View
             android:id="@+id/view2"
-            android:background="@color/line_color"
             android:layout_width="match_parent"
-            android:layout_height="0.5dp" />
+            android:layout_height="0.5dp"
+            android:background="@color/line_color" />
 
         <TextView
             android:id="@+id/dialog_hint_affirm"
@@ -62,7 +62,7 @@
             android:background="@drawable/dialog_affirm_btn_selector"
             android:gravity="center"
             android:padding="15dp"
-            android:text="确定"
+            android:text="确认"
             android:textColor="@color/text_blue_color"
             android:textSize="17sp" />
     </LinearLayout>
