--- a/app/src/main/res/layout/layout_prompt_dialog_horizontal.xml
+++ b/app/src/main/res/layout/layout_prompt_dialog_horizontal.xml
@@ -10,25 +10,24 @@
         android:id="@+id/dialog_hint_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:lineSpacingMultiplier="1"
         android:text="设置头像"
         android:textColor="@color/text_color"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/dialog_hint_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
+        android:layout_height="60dp"
+        android:gravity="center"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="是否删除该记录？"
         android:textColor="@color/text_color"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <View
         android:id="@+id/view1"
