--- a/app/src/main/res/layout/layout_prompt_dialog_horizontal.xml
+++ b/app/src/main/res/layout/layout_prompt_dialog_horizontal.xml
@@ -6,16 +6,22 @@
     android:background="@drawable/shape_solid_white"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/dialog_hint_title"
+    <FrameLayout
+        android:id="@+id/dialog_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="设置头像"
-        android:textColor="@color/text_color"
-        android:textSize="17sp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/dialog_hint_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="设置头像"
+            android:textColor="@color/text_color"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/dialog_hint_content"
