--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -92,7 +92,7 @@
         android:text="@string/contact_customer_service"
         android:textColor="@color/text_color"
         android:textSize="15sp"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <View
         android:layout_width="match_parent"
